--- a/MicroFocus-ROI-app/src/app/app.component.html
+++ b/MicroFocus-ROI-app/src/app/app.component.html
@@ -2,7 +2,11 @@
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#">Micro Focus</a>
+        <a class="navbar-brand" href="#" >
+          <img src="/assets/MicroFocusLogo.png" height="30" width="auto" class="d-inline-block align-top" alt="">
+          
+        </a>
+        <!-- <a class="navbar-brand" href="#">Micro Focus</a> -->
       
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav mr-auto mt-2 mt-md-0">
@@ -18,7 +22,7 @@
           </ul>
           <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="text" placeholder="Search">
-            <button class="btn btn-default my-2 my-sm-0" type="submit">Search</button>
+            <button type="submit" class="btn btn-light my-2 my-sm-0" >Search</button>
           </form>
         </div>
       </nav>
