--- a/MicroFocus-ROI-app/src/app/home/home.component.html
+++ b/MicroFocus-ROI-app/src/app/home/home.component.html
@@ -16,9 +16,12 @@
     </div>
   </div>
     <div class="col home-right"> 
-      <h1 class="fade-in heading">Calculate your ROI from <br> choosing Micro Focus</h1>
+      <h1 class="animated animatedFadeInUp fadeInUp heading">Calculate your ROI from <br> choosing Micro Focus</h1>
+      <p class="info-text fade-in">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do <br> eiusmod tempor
+        incididunt ut ero labore et dolore magna aliqua. <br> Ut enim ad minim veniam, quis nostrud
+        exercitation ullamco.</p>
       <nav>
-        <a class="btn btn-primary fade-in" routerLink="/about" routerLinkActive="active">Our Solutions</a>
+        <a class="btn btn-light fade-in" routerLink="/about" routerLinkActive="active">Our Solutions</a>
         <a class="btn btn-primary fade-in" routerLink="/calculator" routerLinkActive="active">Let's Begin</a>
       </nav>
     </div>
