--- a/MicroFocus-ROI-app/src/app/app.component.html
+++ b/MicroFocus-ROI-app/src/app/app.component.html
@@ -1,35 +1,33 @@
 <nav class="navbar navbar-expand-md navbar-light bg-faded">
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <a class="navbar-brand" href="#" >
-          <img src="/assets/MicroFocusLogo.png" height="30" width="auto" class="d-inline-block align-top" alt="">
-          
-        </a>
-        <!-- <a class="navbar-brand" href="#">Micro Focus</a> -->
-      
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-          <ul class="navbar-nav mr-auto mt-2 mt-md-0">
-           <!--  <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li> -->
-            <li class="nav-item active">
-                    <a class="nav-link" routerLink="/about" routerLinkActive="active">Our Solutions <span class="sr-only">(current)</span></a>
-                  </li>
-            <li class="nav-item active">
-                <a class="nav-link" routerLink="/calculator" routerLinkActive="active">Let's Begin <span class="sr-only">(current)</span></a>
-                </li>
-          </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search">
-            <button type="submit" class="btn btn-light my-2 my-sm-0" >Search</button>
-          </form>
-        </div>
-      </nav>
 
-<!-- 
-<div style="text-align:center">
-<alert type="success">App loaded. Welcome to {{ title }}. Global header will go here</alert>
-   </div> -->
-<router-outlet></router-outlet>
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
+  <a class="navbar-brand" href="#" >
+    <img src="/assets/MicroFocusLogo.png" height="30" width="auto" class="d-inline-block align-top" alt="">
+  </a>
+
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+    <ul class="navbar-nav mr-auto mt-2 mt-md-0">
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/about" routerLinkActive="active">Our Solutions <span class="sr-only">(current)</span></a>
+      </li>
+
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/calculator" routerLinkActive="active">Let's Begin <span class="sr-only">(current)</span></a>
+      </li>
+    </ul>
+
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="text" placeholder="Search">
+      <button type="submit" class="btn btn-light my-2 my-sm-0" >Search</button>
+    </form>
+
+  </div>
+</nav>
+
+
+<router-outlet></router-outlet> <!-- All routes are loaded in here -->
+
+<div class="footer">Footer in progress</div>
