--- a/MicroFocus-ROI-app/src/app/app.component.css
+++ b/MicroFocus-ROI-app/src/app/app.component.css
@@ -1,5 +1,8 @@
+@import "../assets/css/_buttons.css";
+
+
 .footer {
-    position: absolute;
+    position: relative;
     right: 0;
     bottom: 0;
     left: 0;
@@ -8,3 +11,18 @@
     text-align: center;
     color: white;
   }
+
+input {
+  border-radius: 20px;
+}
+
+
+
+ 
+
+/* a:hover{
+  color: white;
+} */
+
+
+
