--- a/MicroFocus-ROI-app/src/app/app.component.html
+++ b/MicroFocus-ROI-app/src/app/app.component.html
@@ -11,11 +11,11 @@
   <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
     <ul class="navbar-nav mr-auto mt-2 mt-md-0">
       <li class="nav-item active">
-        <a class="nav-link" routerLink="/about" routerLinkActive="active">Our Solutions <span class="sr-only">(current)</span></a>
+        <button class="btn btn-light my-2 my-sm-0" routerLink="/about" routerLinkActive="active">Our Solutions <span class="sr-only">(current)</span></button>
       </li>
 
       <li class="nav-item active">
-        <a class="nav-link" routerLink="/calculator" routerLinkActive="active">Let's Begin <span class="sr-only">(current)</span></a>
+          <button class="btn btn-light my-2 my-sm-0" style="margin-left: 7px;" routerLink="/calculator" routerLinkActive="active">Let's Begin <span class="sr-only">(current)</span></button>
       </li>
     </ul>
 
