--- a/MicroFocus-ROI-app/src/styles.css
+++ b/MicroFocus-ROI-app/src/styles.css
@@ -1,10 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 
 html {
-    background-color: #F0F8FF;
+    background-color: #FFFFFF;
 }
 
 body {
-
     overflow-x: hidden;
+}
+
+p, h1, h2, h3, h4, h5, h6, button, a {
+    font-family: 'Helvetica', 'Arial', sans-serif !important;
 }
