--- a/MicroFocus-ROI-app/src/app/home/home.component.html
+++ b/MicroFocus-ROI-app/src/app/home/home.component.html
@@ -1,32 +1,33 @@
 <html>
 <div class="row home-objects">
-  <div class="col-5 home-left" >
+ <!--  <div class="spacing-divs" ></div> --> <!-- Dividing page into threes for spacing. Dunno, there are probably other/better ways to do it later on -->
+    
+  <div class="main-stuff"> 
 
-  </div>
-    <div class="col home-right"> 
 
-        <div class="pie fade-in">
-            <div class="back">
-                <div class="mask">
-                <div class="part anim">
+
+          <div class="pie fade-in">
+              <div class="back">
+                  <div class="mask">
+                  <div class="part anim">
+                  </div>
                 </div>
+                <div class=hole>
+                  </div>
               </div>
-              <div class=hole>
-                </div>
             </div>
-          </div>
-
-      <div class="main-stuff">
+            <div class="not-pie">
         <h1 class="animated animatedFadeInUp fadeInUp heading">Calculate your ROI from choosing Micro Focus</h1>
-        <p class="info-text fade-in">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+        <p class="info-text fade-in featured-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
           incididunt ut ero labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
           exercitation ullamco.</p>
         <nav>
-          <a class="btn btn-light fade-in" routerLink="/about" routerLinkActive="active">Our Solutions</a>
+          <a class="btn btn-primary fade-in" routerLink="/about" routerLinkActive="active">Our Solutions</a>
           <a class="btn btn-primary fade-in" routerLink="/calculator" routerLinkActive="active">Let's Begin</a>
         </nav>
       </div>
-    </div>
-
+      
+  </div>
+<!--   <div class="spacing-divs" ></div> -->
 </div>
 </html>
