--- a/MicroFocus-ROI-app/src/app/app.component.css
+++ b/MicroFocus-ROI-app/src/app/app.component.css
@@ -7,7 +7,7 @@
     bottom: 0;
     left: 0;
     padding: 3rem;
-    background-color: #192122;
+    background-color: #272A2A;
     text-align: center;
     color: white;
   }
