--- a/MicroFocus-ROI-app/src/app/app.component.html
+++ b/MicroFocus-ROI-app/src/app/app.component.html
@@ -1,14 +1,14 @@
 <nav class="navbar navbar-expand-md navbar-light bg-faded">
 
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+  <!-- <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
-  </button>
+  </button> -->
 
   <a class="navbar-brand" href="#" >
     <img src="/assets/MicroFocusLogo.png" height="30" width="auto" class="d-inline-block align-top" alt="">
   </a>
-
-  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+<!-- V In case we ever decide we actually want buttons for our navbar -->
+<!--   <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
     <ul class="navbar-nav mr-auto mt-2 mt-md-0">
       <li class="nav-item active">
         <button class="btn btn-light my-2 my-sm-0" routerLink="/about" routerLinkActive="active">Our Solutions <span class="sr-only">(current)</span></button>
@@ -24,7 +24,7 @@
       <button type="submit" class="btn btn-light my-2 my-sm-0" >Search</button>
     </form>
 
-  </div>
+  </div> -->
 </nav>
 
 
