--- a/MicroFocus-ROI-app/src/app/calculator/calculator.component.html
+++ b/MicroFocus-ROI-app/src/app/calculator/calculator.component.html
@@ -1,3 +1,50 @@
-<p>
-  calculator page here
-</p>
+
+<div class="form1 col-7">
+
+    <h1 class="animated animatedFadeInUp fadeInUp heading">Explore what Micro Focus can do for you</h1>
+    <p class="info-text fade-in featured-text">Please select which solutions you wish to explore below</p>
+
+    <div class="form-content">
+
+      <div class="box">
+
+        <div class="checkbox"><label><input type="checkbox" value=""></label></div>
+        <div class="box-info">        
+          <h3>Identity Manager</h3>
+          <p>Description of item</p>
+        </div>
+
+        <h3 class="side-text">Save $1,500 / year</h3>
+      </div>
+
+      <div class="box">
+
+          <div class="checkbox"><label><input type="checkbox" value=""></label></div>
+          <div class="box-info">        
+            <h3>Access manager</h3>
+            <p>Description of item</p>
+          </div>
+  
+          <h3 class="side-text">Save $600 / year</h3>
+        </div>
+  
+        <div class="box">
+
+            <div class="checkbox"><label><input type="checkbox" value=""></label></div>
+            <div class="box-info">        
+              <h3>Single Sign-on</h3>
+              <p>Description of item</p>
+            </div>
+    
+            <h3 class="side-text">Save $3,500 / year</h3>
+          </div>
+    
+
+
+
+
+
+
+
+    </div>
+</div>
