--- a/MicroFocus-ROI-app/src/app/app.component.html
+++ b/MicroFocus-ROI-app/src/app/app.component.html
@@ -3,4 +3,4 @@
   <router-outlet></router-outlet>
   <!-- All routes are loaded in here -->
 </div>
-<div class="footer"><app-footer></app-footer></div>
+<footer><app-footer></app-footer><footer>
