--- a/MicroFocus-ROI-app/src/app/home/home.component.css
+++ b/MicroFocus-ROI-app/src/app/home/home.component.css
@@ -1,5 +1,10 @@
 @import "../../assets/css/_buttons.css";
 
+.mf-sub-text {
+  font-size: 14px;
+  line-height: 24px;
+}
+
 .home-objects {
   justify-content: center;
 }
@@ -32,6 +37,7 @@ margin-top: 20px;
     position: relative;
     border-radius: 150px;
     background-color: #B9DCFC;
+    box-shadow: 0 3px 6px rgba(0,0,0,.16);
   }
   
   .mask {
