--- a/MicroFocus-ROI-app/src/assets/css/_buttons.css
+++ b/MicroFocus-ROI-app/src/assets/css/_buttons.css
@@ -21,6 +21,17 @@
     background-color: white;
 }
 
-.btn {
-    border-radius: 20px;
+.btn-primary.mf-featured-cta {
+    box-shadow: 0 0 0 0.2rem rgba(0,123,255,.5);
 }
+
+.btn {
+    border-radius: 99px;
+    text-transform: uppercase;
+    font-size: 11px;
+    font-weight: bold;
+    letter-spacing: 0.8px;
+    padding: 14px 22px;
+    margin-right: 11px;
+}
+
