--- a/MicroFocus-ROI-app/src/assets/css/_buttons.css
+++ b/MicroFocus-ROI-app/src/assets/css/_buttons.css
@@ -29,9 +29,12 @@
     border-radius: 99px;
     text-transform: uppercase;
     font-size: 11px;
-    font-weight: bold;
-    letter-spacing: 0.8px;
+    font-weight: 500;
+    letter-spacing: 1px;
     padding: 14px 22px;
     margin-right: 11px;
+    min-width: 140px;
+    text-align: center;
+    color: white;
 }
 
