Worked on calculator component.
Fixed up styling.
Put in better checkboxes.
Started on helper-box component.
Other misc stuff.

--- a/MicroFocus-ROI-app/src/app/app.component.html
+++ b/MicroFocus-ROI-app/src/app/app.component.html
@@ -1,6 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-light bg-faded"><app-header></app-header></nav>
 <div class="main">
-  <router-outlet></router-outlet>
-  <!-- All routes are loaded in here -->
+  <router-outlet></router-outlet>  <!-- All routes are loaded in here -->
 </div>
-<footer><app-footer></app-footer><footer>
+<footer><app-footer></app-footer><footer> <!-- Footer route here -->
