--- a/MicroFocus-ROI-app/src/app/home/home.component.html
+++ b/MicroFocus-ROI-app/src/app/home/home.component.html
@@ -1,22 +1,16 @@
 <html>
-<div class="row home-objects">
- <!--  <div class="spacing-divs" ></div> --> <!-- Dividing page into threes for spacing. Dunno, there are probably other/better ways to do it later on -->
-    
+<div class="row home-objects col">
   <div class="main-stuff"> 
-
-
-
-          <div class="pie fade-in">
-              <div class="back">
-                  <div class="mask">
-                  <div class="part anim">
-                  </div>
-                </div>
-                <div class=hole>
-                  </div>
-              </div>
+    <div class="pie fade-in">
+      <div class="back">
+          <div class="mask">
+            <div class="part anim">
             </div>
-            <div class="not-pie">
+          </div>
+          <div class=hole></div>
+        </div>
+      </div>
+      <div class="not-pie">
         <h1 class="animated animatedFadeInUp fadeInUp heading">Calculate your ROI from choosing Micro Focus</h1>
         <p class="info-text fade-in mf-sub-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
           incididunt ut ero labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
@@ -26,8 +20,6 @@
           <a class="btn btn-primary fade-in mf-featured-cta" routerLink="/calculator" routerLinkActive="active">Let's Begin</a>
         </nav>
       </div>
-      
+    </div>
   </div>
-<!--   <div class="spacing-divs" ></div> -->
-</div>
 </html>
