--- a/MicroFocus-ROI-app/src/app/calculator/calculator.component.html
+++ b/MicroFocus-ROI-app/src/app/calculator/calculator.component.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
 
 <div class="form1 col-7">
 
@@ -7,44 +8,52 @@
     <div class="form-content">
 
       <div class="box">
-
-        <div class="checkbox"><label><input type="checkbox" value=""></label></div>
+        <div class="left-text">
+          <div class="checkbox checkbox-primary">
+            <input id="checkbox1" type="checkbox" checked="">
+            <label for="checkbox1"></label>
+        </div>
         <div class="box-info">        
           <h3>Identity Manager</h3>
           <p>Description of item</p>
-        </div>
-
-        <h3 class="side-text">Save $1,500 / year</h3>
+        </div>  
       </div>
+      <h3 class="right-text">Save $1,500 / year</h3>
+    </div>
 
       <div class="box">
-
-          <div class="checkbox"><label><input type="checkbox" value=""></label></div>
+        <div class="left-text">
+          <div class="checkbox checkbox-primary">
+            <input id="checkbox2" type="checkbox" checked="">
+            <label for="checkbox2"></label>
+        </div>
           <div class="box-info">        
             <h3>Access manager</h3>
             <p>Description of item</p>
-          </div>
-  
-          <h3 class="side-text">Save $600 / year</h3>
         </div>
+      </div>
+        <h3 class="right-text">Save $600 / year</h3>
+      </div>
   
         <div class="box">
-
-            <div class="checkbox"><label><input type="checkbox" value=""></label></div>
+          <div class="left-text">
+            <div class="checkbox checkbox-primary">
+              <input id="checkbox3" type="checkbox" checked="">
+              <label for="checkbox3"></label>
+          </div>
             <div class="box-info">        
               <h3>Single Sign-on</h3>
               <p>Description of item</p>
             </div>
-    
-            <h3 class="side-text">Save $3,500 / year</h3>
           </div>
-    
+          <h3 class="right-text">Save $3,500 / year</h3>
+        </div>
+       </div>
+</div>
+<div class="col-5"><app-helper-box></app-helper-box></div>
 
-
-
-
-
-
-
-    </div>
+<div class="bottom-content">
+  <nav style="text-align: center;">
+    <a class="btn btn-primary mf-featured-cta" routerLink="/calculator" routerLinkActive="active">Continue</a>
+  </nav>
 </div>
