"Finished" (for now) Explore page. Added columns to footer
Also made Helper (tooltips) component.

--- a/MicroFocus-ROI-app/src/app/footer/footer.component.html
+++ b/MicroFocus-ROI-app/src/app/footer/footer.component.html
@@ -1,3 +1,18 @@
+
 <div class="footer">
-  FOOTER
+
+<div class="row">
+
+<div class="col-2 footer-text">Logo and date </div>
+
+<div class="col-2 footer-text">About links</div>
+
+<div class="col-2 footer-text">Social links</div>
+
+<div class="col-3 footer-text">Subscribe to our newletter</div>
+<div class="col-3 footer-text">Contact information</div>
+
+</div>
+
+  <!-- FOOTER -->
 </div>
