--- a/MicroFocus-ROI-app/src/app/helper-box/helper-box.component.html
+++ b/MicroFocus-ROI-app/src/app/helper-box/helper-box.component.html
@@ -1,4 +1,15 @@
-<div class="helper-box">
+<div class="mf-tooltip">
+        <img src="#" alt="">
+        <div class="mf-desc">
+          <h4>Tooltip Box</h4>
+          <p>Lorem Ipsum and things</p>
+          <a href="#" class="mf-learn-more">Learn More</a>
+        </div>
+      </div>
+
+
+
+<!-- <div class="helper-box">
 
 <div class="blue-top"></div>
 <div class="text">
@@ -8,4 +19,4 @@
 
 <div class="learn-more">Learn More</div>
 
-</div>
+</div> -->
