--- a/MicroFocus-ROI-app/src/app/calculator/calculator.component.css
+++ b/MicroFocus-ROI-app/src/app/calculator/calculator.component.css
@@ -10,9 +10,9 @@
 }
 
 .form-content {
+    position: relative;
     display: flex;
     flex-direction: column;
-    
 }
 
 .left-text {
@@ -20,16 +20,16 @@
 }
 
 .box {
-    display: inline-flex;
+    /* display: inline-flex; */
     justify-content: space-between;
     border-radius: 10px;
-    max-height: 100px;
+    height: auto;
     max-width: 700px;
     border-style: solid;
     border-width: medium;
     border-color: lightblue;
-    padding: 15px 25px 15px 25px;
-    margin: 20px 0px 20px 55px;
+    padding: 15px 25px 5px 25px;
+    margin: 15px 0px 15px 55px;
     background-color: white;
 }
 
@@ -40,7 +40,20 @@
 
 }
 
+.extra-detail {
+    display: block;
+    width: 100%;
+    height: 200px;
+    /* background: black; */
+}
 
+.detail-image {
+    width: 100%;
+    height: auto;
+/*     position: absolute;
+    left: 66px;
+    margin-bottom: 10px; */
+}
 
 .right-text {
 
@@ -50,6 +63,13 @@
     float: right;
 }
 
+.helper {
+
+    top: -70px;
+    width: auto;
+    height: auto;
+}
+
 .bottom-content {
     position: absolute;
     width: 100vw;
@@ -57,5 +77,9 @@
     bottom: 0;
 }
 
-
+.col-5 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
