--- a/MicroFocus-ROI-app/src/app/helper-box/helper-box.component.css
+++ b/MicroFocus-ROI-app/src/app/helper-box/helper-box.component.css
@@ -1,5 +1,26 @@
-.helper-box {
+.mf-tooltip {
+    position: relative;
+    top: -65px;
+    border-radius: 4px;
+    box-shadow: 0 3px 10px rgba(0,0,0,.16);
+    width: 360px;
+    overflow: hidden;
+}
+
+.mf-tooltip img{
+    display: block;
+    width: 100%;
+    height: 150px;
+    background-color: #00CFFB;
+}
+
+.mf-tooltip .mf-desc {
+    background: white;
+    padding: 20px;
+}
+
+/* .helper-box {
     width: 250px;
     height: 300px;
     background: grey;
-}
+} */
