--- a/MicroFocus-ROI-app/src/assets/css/_buttons.css
+++ b/MicroFocus-ROI-app/src/assets/css/_buttons.css
@@ -46,6 +46,7 @@
     user-select: none;
     padding-left: 0;
     margin-right: 20px;
+    margin-top: 5px;
  }
 .checkbox label {
     cursor: pointer;
