added App field to questionnaire

--- a/MicroFocus-ROI-app/src/app/questionnaire/questionnaire.component.html
+++ b/MicroFocus-ROI-app/src/app/questionnaire/questionnaire.component.html
@@ -6,19 +6,23 @@
 
         <div class="mf-input-row">
           <label for="num_staff">Number of Staff</label>
-          <input name="num_staff" type="text" placeholder="0">
+          <input id="num_staff" name="num_staff" type="text" placeholder="0">
         </div>
         <div class="mf-input-row percentage">
           <label for="annual_turnover">Annual Turnover (%)</label>
-          <input name="annual_turnover" type="text" placeholder="0.0">
+          <input id="annual_turnover" name="annual_turnover" type="text" placeholder="0.0">
         </div>
         <div class="mf-input-row dollar">
           <label for="avg_wage">Average Hourly Wage</label>
-          <input name="avg_wage" type="text" placeholder="0.00">
+          <input id="avg_wage" name="avg_wage" type="text" placeholder="0.00">
         </div>
         <div class="mf-input-row dollar">
           <label for="avg_it">Average IT Hourly Wage</label>
-          <input name="avg_it" type="text" placeholder="0.00">
+          <input id="avg_it" name="avg_it" type="text" placeholder="0.00">
+        </div>
+        <div class="mf-input-row">
+          <label for="num_app">Number of Applications</label>
+          <input id="num_app" name="num_app" type="text" placeholder="0">
         </div>
         <a class="btn btn-primary mf-cont-btn" routerLink="/calculator">continue</a>
 
