swapped out tooltip on questionnaire with new component

--- a/MicroFocus-ROI-app/src/app/questionnaire/questionnaire.component.html
+++ b/MicroFocus-ROI-app/src/app/questionnaire/questionnaire.component.html
@@ -24,19 +24,12 @@
           <label for="num_app">Number of Applications</label>
           <input id="num_app" name="num_app" type="text" placeholder="0">
         </div>
-        <a class="btn btn-primary mf-cont-btn" routerLink="/calculator">continue</a>
+        <a class="btn btn-primary mf-cont-btn" routerLink="/savings">continue</a>
 
       </div>
     </div>
     <div class="col-md-6">
-      <div class="mf-tooltip">
-        <img src="#" alt="">
-        <div class="mf-desc">
-          <h4>Tooltip Box</h4>
-          <p>Lorem Ipsum and things</p>
-          <a href="#" class="mf-learn-more">Learn More</a>
-        </div>
-      </div>
+      <app-helper-box></app-helper-box>
     </div>
   </div>
 </div>
