--- a/MicroFocus-ROI-app/src/app/calculator/calculator.component.css
+++ b/MicroFocus-ROI-app/src/app/calculator/calculator.component.css
@@ -1,43 +1,66 @@
 @import "../../assets/css/_buttons.css";
+@import "../../assets/css/_forms.css";
+@import "../../assets/css/_animations.css";
 
 .form1 {
     padding-left: 50px;
     padding-top: 50px;
 }
 
-.col-7 {
+/* .col-7 {
     height: calc(100vh - 56px);
-}
+} */
 
 .form-content {
     position: relative;
-    display: flex;
-    flex-direction: column;
+    /* display: flex;
+    flex-direction: column; */
 }
 
 .left-text {
     display: inline-flex;
 }
 
+.left-text .checkbox {
+    margin-top: 15px;
+    margin-right: 25px; 
+}
+
+.right-text {
+    float: right;
+    margin-top: 18px;
+}
+
 .box {
     /* display: inline-flex; */
     justify-content: space-between;
-    border-radius: 10px;
-    height: auto;
+    border-radius: 6px;
+    /* height: auto; */
     max-width: 700px;
     border-style: solid;
-    border-width: medium;
-    border-color: lightblue;
-    padding: 15px 25px 5px 25px;
-    margin: 15px 0px 15px 55px;
+    border-width: 1px;
+    border-color: #00CFFB;
+    padding: 25px 30px;
+    /* margin: 15px 0px 15px 55px; */
+    margin: 15px 0;
     background-color: white;
 }
 
 .box-info {
     display: block;
-    margin-top: 5px;
     margin-right: 30px;
 
+}
+
+.box-info .mf-title {
+    font-weight: bold;
+    font-size: 20px;
+    margin-bottom: 8px;
+}
+
+.box-info p {
+    font-size: 14px;
+    margin-bottom: 0;
 }
 
 .extra-detail {
@@ -55,31 +78,16 @@
     margin-bottom: 10px; */
 }
 
-.right-text {
-
-    right: 90px;
-    /* text-align: right; */
-    margin-top: 18px;
-    float: right;
-}
 
 .helper {
-
     top: -70px;
     width: auto;
     height: auto;
 }
 
-.bottom-content {
-    position: absolute;
-    width: 100vw;
-    height: 100px;
-    bottom: 0;
-}
-
 .col-5 {
-    display: flex;
+    /* display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center; */
 }
 
