--- a/MicroFocus-ROI-app/src/app/calculator/calculator.component.html
+++ b/MicroFocus-ROI-app/src/app/calculator/calculator.component.html
@@ -1,65 +1,33 @@
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
-<div class="row">
-  <div class="form1 col-7">
-
-      <h1 class="animated animatedFadeInUp fadeInUp heading">Explore what Micro Focus can do for you</h1>
+<div class="container">
+  <div class="row">
+    <div class="form1 col-md-7">
+      <h2 class="animated animatedFadeInUp fadeInUp heading">Explore what Micro Focus can do for you</h2>
       <p class="info-text fade-in featured-text">Please select which solutions you wish to explore below</p>
-
       <div class="form-content">
 
-        <div class="box">
+        <div class="box" *ngFor="let cat of categories">
           <div class="left-text">
             <div class="checkbox checkbox-primary">
-              <input id="checkbox1" type="checkbox" [(ngModel)]="box1" checked="">
-              <label for="checkbox1"></label>
-          </div>
-          <div class="box-info">        
-            <h3>Identity Manager</h3>
-            <p>Description of item</p>
-          </div>  
-        </div>
-        <h3 class="right-text">Save $1,500 / year</h3>
-        <div class="extra-detail" *ngIf="box1"><img src="assets/TempImage.png" width="auto" class="detail-image" alt=""></div>
-      </div>
-        <div class="box">
-          <div class="left-text">
-            <div class="checkbox checkbox-primary">
-              <input id="checkbox2" type="checkbox" [(ngModel)]="box2" checked="">
-              <label for="checkbox2"></label>
-          </div>
-            <div class="box-info">        
-              <h3>Access manager</h3>
-              <p>Description of item</p>
+              <input id="{{cat.id}}_checkbox" type="checkbox" [(ngModel)]="cat.checked" checked="">
+              <label for="{{cat.id}}_checkbox"></label>
+            </div>
+            <div class="box-info">
+              <div class="mf-title">{{ cat.name }}</div>
+              <p>{{ cat.description }}</p>
             </div>
           </div>
-          <h3 class="right-text">Save $600 / year</h3>
-          <div class="extra-detail" *ngIf="box2"><img src="assets/TempImage.png" width="auto" class="detail-image" alt=""></div>
-        </div>
-          <div class="box">
-            <div class="left-text">
-              <div class="checkbox checkbox-primary">
-                <input id="checkbox3" type="checkbox" [(ngModel)]="box3" checked="">
-                <label for="checkbox3"></label>
-            </div>
-              <div class="box-info">        
-                <h3>Single Sign-on</h3>
-                <p>Description of item</p>
-              </div>
-            </div>
-            <h3 class="right-text">Save $3,500 / year</h3>
-            <div class="extra-detail" *ngIf="box3"><img src="assets/TempImage.png" width="auto" class="detail-image" alt=""></div>
+          <div class="right-text mf-savings">Save {{ cat.savings | currency: dollar }} / year</div>
+          <div class="extra-detail" *ngIf="cat.checked">
+            <img src="assets/TempImage.png" width="auto" class="detail-image" alt="">
           </div>
         </div>
-  </div>
 
-  <div class="col-5">
-    <div class="helper">
-  <app-helper-box></app-helper-box> <!-- For now I'll make the tooltip Absolute with this box as the parent. Later we'll have it move on mouse hover -->
+        <a class="btn btn-primary" routerLink="/begin" routerLinkActive="active">Change Information</a>
+      </div>
+    </div>
+
+    <div class="col-md-5">
+      <app-helper-box></app-helper-box><!-- For now I'll make the tooltip Absolute with this box as the parent. Later we'll have it move on mouse hover -->
     </div>
   </div>
-</div>
-<div class="bottom-content">
-  <nav style="text-align: center;">
-    <a class="btn btn-primary mf-featured-cta" routerLink="/calculator" routerLinkActive="active">Continue</a>
-  </nav>
 </div>
