--- a/MicroFocus-ROI-app/src/app/helper-box/helper-box.component.css
+++ b/MicroFocus-ROI-app/src/app/helper-box/helper-box.component.css
@@ -1,6 +1,6 @@
 .mf-tooltip {
-    position: relative;
-    top: -65px;
+    position: absolute;
+    top: 0;
     border-radius: 4px;
     box-shadow: 0 3px 10px rgba(0,0,0,.16);
     width: 360px;
