--- a/assets/css/_buttons.css
+++ b/assets/css/_buttons.css
@@ -1,5 +1,7 @@
 /* These can be imported into any CSS file where global elements need to be overwritten. I'll be putting Mirco Focus specific styling in here */
 
+/* Buttons */
+
 .btn-light {
     color: #355ED4;
     border-color: blue;
