update animations on home and questionnaire

--- a/MicroFocus-ROI-app/src/app/questionnaire/questionnaire.component.html
+++ b/MicroFocus-ROI-app/src/app/questionnaire/questionnaire.component.html
@@ -1,26 +1,26 @@
 <div class="mf-questn container">
   <div class="row">
     <div class="col-md-6">
-      <h2 style="margin-left: 28%">Tell us a little about your organization</h2>
+      <h2 class="animated fade-in-up" style="margin-left: 28%">Tell us a little about your organization</h2>
       <div class="mf-questn-form">
 
-        <div class="mf-input-row">
+        <div class="mf-input-row animated fade-in-up" style="animation-delay: .2s;">
           <label for="num_staff">Number of Staff</label>
           <input id="num_staff" name="num_staff" type="text" placeholder="0">
         </div>
-        <div class="mf-input-row percentage">
+        <div class="mf-input-row percentage animated fade-in-up" style="animation-delay: .3s;">
           <label for="annual_turnover">Annual Turnover (%)</label>
           <input id="annual_turnover" name="annual_turnover" type="text" placeholder="0.0">
         </div>
-        <div class="mf-input-row dollar">
+        <div class="mf-input-row dollar animated fade-in-up" style="animation-delay: .4s;">
           <label for="avg_wage">Average Hourly Wage</label>
           <input id="avg_wage" name="avg_wage" type="text" placeholder="0.00">
         </div>
-        <div class="mf-input-row dollar">
+        <div class="mf-input-row dollar animated fade-in-up" style="animation-delay: .5s;">
           <label for="avg_it">Average IT Hourly Wage</label>
           <input id="avg_it" name="avg_it" type="text" placeholder="0.00">
         </div>
-        <div class="mf-input-row">
+        <div class="mf-input-row animated fade-in-up" style="animation-delay: .6s;">
           <label for="num_app">Number of Applications</label>
           <input id="num_app" name="num_app" type="text" placeholder="0">
         </div>
@@ -28,7 +28,7 @@
 
       </div>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-6 animated fade-in" style="animation-delay:.5s;">
       <app-helper-box></app-helper-box>
     </div>
   </div>
