--- a/MicroFocus-ROI-app/src/app/home/home.component.html
+++ b/MicroFocus-ROI-app/src/app/home/home.component.html
@@ -11,12 +11,12 @@
         </div>
       </div>
       <div class="not-pie">
-        <h1 class="animated animatedFadeInUp fadeInUp heading">Calculate your ROI from choosing Micro Focus</h1>
+        <h1 class="animated fade-in-up heading">Calculate your ROI from choosing Micro Focus</h1>
         <p class="info-text fade-in mf-sub-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
           incididunt ut ero labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
           exercitation ullamco.</p>
         <nav>
-          <a class="btn btn-primary fade-in" routerLink="/about" routerLinkActive="active">Our Solutions</a>
+          <a class="btn btn-primary fade-in" style="margin-right:8px;" routerLink="/about" routerLinkActive="active">Our Solutions</a>
           <a class="btn btn-primary fade-in mf-featured-cta" routerLink="/begin" routerLinkActive="active">Let's Begin</a>
         </nav>
       </div>
