--- a/MicroFocus-ROI-app/src/app/calculator/calculator.component.css
+++ b/MicroFocus-ROI-app/src/app/calculator/calculator.component.css
@@ -2,92 +2,61 @@
 @import "../../assets/css/_forms.css";
 @import "../../assets/css/_animations.css";
 
-.form1 {
-    padding-left: 50px;
-    padding-top: 50px;
+.mf-calc {
+    padding: 50px 20px;
 }
 
-/* .col-7 {
-    height: calc(100vh - 56px);
-} */
-
-.form-content {
+.mf-solutions-list {
     position: relative;
-    /* display: flex;
-    flex-direction: column; */
-}
-
-.left-text {
-    display: inline-flex;
-}
-
-.left-text .checkbox {
-    margin-top: 15px;
-    margin-right: 25px; 
-}
-
-.right-text {
-    float: right;
-    margin-top: 18px;
 }
 
 .box {
-    /* display: inline-flex; */
-    justify-content: space-between;
     border-radius: 6px;
-    /* height: auto; */
-    max-width: 700px;
     border-style: solid;
     border-width: 1px;
     border-color: #00CFFB;
-    padding: 25px 30px;
-    /* margin: 15px 0px 15px 55px; */
     margin: 15px 0;
     background-color: white;
+    overflow: hidden;
 }
 
-.box-info {
-    display: block;
-    margin-right: 30px;
-
-}
-
-.box-info .mf-title {
+.mf-title {
     font-weight: bold;
     font-size: 20px;
-    margin-bottom: 8px;
+    border-bottom: 1px solid #293138;
+    padding: 20px 0 9px;
+    margin: 0 15px 11px;
 }
 
-.box-info p {
+.mf-subtitle {
     font-size: 14px;
-    margin-bottom: 0;
 }
 
-.extra-detail {
-    display: block;
-    width: 100%;
-    height: 200px;
-    /* background: black; */
+.mf-solution-desc {
+    font-size: 14px;
+    padding: 0 30px;
 }
 
-.detail-image {
-    width: 100%;
-    height: auto;
-/*     position: absolute;
-    left: 66px;
-    margin-bottom: 10px; */
+.mf-solution-cta {
+    position: relative;
+    background: #881FD3;
+    padding: 15px 30px;
+    margin-top: 15px;
 }
 
-
-.helper {
-    top: -70px;
-    width: auto;
-    height: auto;
+.mf-savings {
+    text-align: center;
+    color: white;
+    padding: 7px 0;
+    font-size: 20px;
 }
 
-.col-5 {
-    /* display: flex;
-    align-items: center;
-    justify-content: center; */
+.mf-change-btn {
+    float: right;
 }
 
+@media (min-width: 750px) {
+    .mf-savings {
+        float: right;
+    }
+}
